# Agribot2024

./: .gitignore  README.md
ros_ws/src/Agri/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_ws/src/Agri/Agri/: feedback_control.py  fields2cover_nav2_node.py  joystickcontrol.py  motorcontrol.py
ros_ws/src/Agri/Firmware/: Feedback.ino  manual_motorcontrol.ino  omninew
ros_ws/src/Agri/Firmware/MotorAndMechanisms/: MotorAndMechanisms.ino
ros_ws/src/Agri/config/: diff_drive_controller.yaml  ekf.yaml
ros_ws/src/Agri/launch/: ekf_launch.py  robot_control.launch.py
ros_ws/src/Agri/urdf/: agribot.urdf
ros_ws/src/custom_inferfaces/: CMakeLists.txt  package.xml
ros_ws/src/custom_inferfaces/srv/: ButtonService.srv
